--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     
                     <div class="card">
                         <img src="./images/furnace-icon.png" alt="">
-                        <h2>Popravka Klima i Grejanja</h2>
+                        <h2>Popravka Klima</h2>
                         <p>Usluge klima uređaja i grejanja u Fort Worth, TX i okolini. Možete računati na naše stručnjake iz
                             West-O-Plex Air Conditioning and Heating da obave posao za vas.</p>
                         <a href="#">Pročitaj Više</a>
